# Prueba-Ros2

./: default.rviz  h.txt  hola.txt
install/: local_setup.sh  setup.sh
install/holonomic_robot/lib/holonomic_robot/: navigate_robot.py
install/holonomic_robot/share/holonomic_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/holonomic_robot/share/holonomic_robot/config/: nav2_params.yaml
install/holonomic_robot/share/holonomic_robot/launch/: holonomic_robot_gazebo.launch.py
install/occupancy_grid_demo/lib/occupancy_grid_demo/: occupancy_grid_publisher
install/occupancy_grid_demo/share/occupancy_grid_demo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/holonomic_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/holonomic_robot/launch/: holonomic_robot_gazebo.launch.py  nav2_launch.py
src/holonomic_robot/urdf/: holonomic_robot.urdf
src/occupancy_grid_demo/: setup.cfg  setup.py
